--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -11,14 +11,262 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "from PIL import Image\n",
-    "\n",
-    "my_dpi = 192"
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
+   "id": "e6d71c22-18d7-4cba-92d2-2b2714232aef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CR2.1.100</th>\n",
+       "      <th>RMSE2.1.100</th>\n",
+       "      <th>CR2.1.75</th>\n",
+       "      <th>RMSE2.1.75</th>\n",
+       "      <th>CR2.1.50</th>\n",
+       "      <th>RMSE2.1.50</th>\n",
+       "      <th>CR2.1.25</th>\n",
+       "      <th>RMSE2.1.25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.148863</td>\n",
+       "      <td>8.895564e-11</td>\n",
+       "      <td>5.433290</td>\n",
+       "      <td>2.413468e-09</td>\n",
+       "      <td>7.250648</td>\n",
+       "      <td>2.066075e-09</td>\n",
+       "      <td>10.538945</td>\n",
+       "      <td>7.935654e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.128169</td>\n",
+       "      <td>5.342171e-11</td>\n",
+       "      <td>5.414409</td>\n",
+       "      <td>1.362190e-09</td>\n",
+       "      <td>7.321399</td>\n",
+       "      <td>1.049199e-09</td>\n",
+       "      <td>10.645278</td>\n",
+       "      <td>4.895494e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.985854</td>\n",
+       "      <td>3.721427e-11</td>\n",
+       "      <td>5.119674</td>\n",
+       "      <td>1.065077e-09</td>\n",
+       "      <td>6.837657</td>\n",
+       "      <td>9.592430e-10</td>\n",
+       "      <td>10.001224</td>\n",
+       "      <td>3.481931e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.891004</td>\n",
+       "      <td>3.419594e-11</td>\n",
+       "      <td>5.099813</td>\n",
+       "      <td>6.668726e-10</td>\n",
+       "      <td>6.733937</td>\n",
+       "      <td>6.549022e-10</td>\n",
+       "      <td>9.802158</td>\n",
+       "      <td>4.132626e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3.999041</td>\n",
+       "      <td>4.510328e-11</td>\n",
+       "      <td>5.279747</td>\n",
+       "      <td>9.854418e-10</td>\n",
+       "      <td>6.860197</td>\n",
+       "      <td>8.921002e-10</td>\n",
+       "      <td>10.002398</td>\n",
+       "      <td>5.118124e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>3.425889</td>\n",
+       "      <td>9.344500e-03</td>\n",
+       "      <td>4.549869</td>\n",
+       "      <td>1.076258e-01</td>\n",
+       "      <td>5.946827</td>\n",
+       "      <td>9.852367e-02</td>\n",
+       "      <td>8.507975</td>\n",
+       "      <td>3.752934e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>3.333994</td>\n",
+       "      <td>1.028376e-02</td>\n",
+       "      <td>4.446794</td>\n",
+       "      <td>1.147821e-01</td>\n",
+       "      <td>5.795004</td>\n",
+       "      <td>1.057475e-01</td>\n",
+       "      <td>8.275523</td>\n",
+       "      <td>4.032081e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>3.298053</td>\n",
+       "      <td>1.137544e-02</td>\n",
+       "      <td>4.424648</td>\n",
+       "      <td>1.285578e-01</td>\n",
+       "      <td>5.714533</td>\n",
+       "      <td>1.133334e-01</td>\n",
+       "      <td>8.115479</td>\n",
+       "      <td>4.539184e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>3.361852</td>\n",
+       "      <td>1.263808e-02</td>\n",
+       "      <td>4.483221</td>\n",
+       "      <td>1.408847e-01</td>\n",
+       "      <td>5.828970</td>\n",
+       "      <td>1.228165e-01</td>\n",
+       "      <td>8.277571</td>\n",
+       "      <td>5.007920e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>3.387097</td>\n",
+       "      <td>1.424251e-02</td>\n",
+       "      <td>4.474035</td>\n",
+       "      <td>1.639391e-01</td>\n",
+       "      <td>5.798102</td>\n",
+       "      <td>1.387495e-01</td>\n",
+       "      <td>8.255528</td>\n",
+       "      <td>6.061130e-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CR2.1.100   RMSE2.1.100  CR2.1.75    RMSE2.1.75  CR2.1.50    RMSE2.1.50  \\\n",
+       "0     4.148863  8.895564e-11  5.433290  2.413468e-09  7.250648  2.066075e-09   \n",
+       "1     4.128169  5.342171e-11  5.414409  1.362190e-09  7.321399  1.049199e-09   \n",
+       "2     3.985854  3.721427e-11  5.119674  1.065077e-09  6.837657  9.592430e-10   \n",
+       "3     3.891004  3.419594e-11  5.099813  6.668726e-10  6.733937  6.549022e-10   \n",
+       "4     3.999041  4.510328e-11  5.279747  9.854418e-10  6.860197  8.921002e-10   \n",
+       "..         ...           ...       ...           ...       ...           ...   \n",
+       "196   3.425889  9.344500e-03  4.549869  1.076258e-01  5.946827  9.852367e-02   \n",
+       "197   3.333994  1.028376e-02  4.446794  1.147821e-01  5.795004  1.057475e-01   \n",
+       "198   3.298053  1.137544e-02  4.424648  1.285578e-01  5.714533  1.133334e-01   \n",
+       "199   3.361852  1.263808e-02  4.483221  1.408847e-01  5.828970  1.228165e-01   \n",
+       "200   3.387097  1.424251e-02  4.474035  1.639391e-01  5.798102  1.387495e-01   \n",
+       "\n",
+       "      CR2.1.25    RMSE2.1.25  \n",
+       "0    10.538945  7.935654e-10  \n",
+       "1    10.645278  4.895494e-10  \n",
+       "2    10.001224  3.481931e-10  \n",
+       "3     9.802158  4.132626e-10  \n",
+       "4    10.002398  5.118124e-10  \n",
+       "..         ...           ...  \n",
+       "196   8.507975  3.752934e-02  \n",
+       "197   8.275523  4.032081e-02  \n",
+       "198   8.115479  4.539184e-02  \n",
+       "199   8.277571  5.007920e-02  \n",
+       "200   8.255528  6.061130e-02  \n",
+       "\n",
+       "[201 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load data and create dataframe\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame(index=np.arange(201))\n",
+    "my_dpi = 192\n",
+    "\n",
+    "for i in range(201):\n",
+    "    arr = phi[:,:,i]\n",
+    "\n",
+    "    # Create convert function to use to convert output_array back to raw values\n",
+    "    phimax, phimin = np.max(arr), np.min(arr)\n",
+    "    ratio = (phimax-phimin)/255\n",
+    "    def convertRGBToRaw(x):\n",
+    "        return ratio*x + phimin\n",
+    "\n",
+    "    # Plot image (raw automatically converted to grayscale)\n",
+    "    plt.figure(figsize=(294/my_dpi, 165/my_dpi), dpi=my_dpi)\n",
+    "    plt.imshow(arr, cmap='gray')\n",
+    "    plt.axis(\"off\")\n",
+    "\n",
+    "    # Save as PNG & JPG of varying quality and open JPG's again to convert to np array\n",
+    "    plt.savefig('2.1.png', bbox_inches='tight', pad_inches=0)\n",
+    "\n",
+    "    for q in [100, 75, 50, 25]:\n",
+    "        title = '2.1.' + str(q) + '.jpg'\n",
+    "        plt.savefig(title, bbox_inches='tight', pad_inches=0, dpi=(q*my_dpi/100))\n",
+    "        im = Image.open(title)\n",
+    "        output_array = np.asarray(im)\n",
+    "    \n",
+    "        # Loop through output_array and replace RGB by raw in copy\n",
+    "        copy = arr.copy()\n",
+    "        for row_index, row in enumerate(output_array):\n",
+    "            for col_index, col in enumerate(row):\n",
+    "                copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
+    "    \n",
+    "        # Compute RMSE's and compression ratio and add to dataframe\n",
+    "        in_imsize = os.stat('2.1.png').st_size\n",
+    "        out_imsize = os.stat(title).st_size\n",
+    "        crcol = 'CR2.1.' + str(q)\n",
+    "        df.at[i, crcol] = in_imsize/out_imsize\n",
+    "        \n",
+    "        diff = copy - arr\n",
+    "        rmse = np.sqrt(np.mean(diff**2))\n",
+    "        rmsecol = 'RMSE2.1.' + str(q)\n",
+    "        df.at[i, rmsecol] = rmse\n",
+    "        \n",
+    "    plt.close()\n",
+    "# df.to_pickle(\"analysis2.1.pkl\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "57062785-b21d-45f6-993e-aa09d884fafa",
    "metadata": {},
    "outputs": [
@@ -125,7 +373,7 @@
        "[201 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +381,8 @@
    "source": [
     "# Load data and create dataframe\n",
     "phi = np.load(\"Phi_201snap.npy\")\n",
-    "df = pd.DataFrame(columns=['CR2.1', 'RMSE2.1'], index=np.arange(201))\n",
+    "df2 = pd.DataFrame(columns=['CR2.1', 'RMSE2.1'], index=np.arange(201))\n",
+    "my_dpi = 100\n",
     "\n",
     "for i in range(201):\n",
     "    arr = phi[:,:,i]\n",
@@ -165,12 +414,13 @@
     "    # Compute RMSE's and compression ratio and add to dataframe\n",
     "    in_imsize = os.stat('analysis2.1.png').st_size\n",
     "    out_imsize = os.stat('analysis2.1.jpg').st_size\n",
-    "    df.at[i, 'CR2.1'] = in_imsize/out_imsize\n",
+    "    df2.at[i, 'CR2.1'] = in_imsize/out_imsize\n",
     "    \n",
     "    diff = copy - arr\n",
     "    rmse = np.sqrt(np.mean(diff**2))\n",
-    "    df.at[i, 'RMSE2.1'] = rmse\n",
-    "# df.to_pickle(\"analysis2.1.pkl\")"
+    "    df2.at[i, 'RMSE2.1'] = rmse\n",
+    "# df.to_pickle(\"analysis2.1.pkl\")\n",
+    "df2"
    ]
   },
   {
